<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <TextView
        android:id="@+id/gearLabel"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="108dp"
        android:text="@string/gearLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/rpmLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rpmLabel"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="97dp"
        android:text="@string/rpmLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gearLabel" />

    <TextView
        android:id="@+id/gear"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/gear"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/gearLabel"
        app:layout_constraintStart_toEndOf="@+id/gearLabel" />

    <TextView
        android:id="@+id/rpm"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="72dp"
        android:text="@string/rpm"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rpmLabel"
        app:layout_constraintStart_toEndOf="@+id/rpmLabel"
        app:layout_constraintTop_toBottomOf="@+id/gear" />

    <TextView
        android:id="@+id/dist"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/distance_of"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/rpm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/distance_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpmLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>